--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
     <title>Contact</title>
 </head>
 <body>
+    <p>Lorem.</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
 </body>
 </html>
