--- a/home.html
+++ b/home.html
@@ -6,6 +6,7 @@
     <title>Home</title>
 </head>
 <body>
+    <h1>home page</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
     <p>Lorem, ipsum.</p>
 </body>
